# cycleman

./: .deepsource.toml  Procfile  manage.py  pyproject.toml  requirements.txt
CycleMan/: asgi.py  settings.py  urls.py  wsgi.py
CycleManApp/: apps.py  models.py  serializers.py  urls.py  views.py  views.py.b59c4f6f49dbc328806a25237ff361cb.tmp
CycleManApp/migrations/: 0001_initial.py
